[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Interfaces/EnemyWarningInterface.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/andika-basic/AndikaNewBasic-B.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.235294, 0.321569, 0.32549, 0.443137 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=2]
size = 19
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.176471, 0.188235, 0.254902, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="EnemyWarningInterface" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -373.0
margin_top = -200.0
margin_right = 411.0
margin_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )

[node name="DisplayPanel" type="Panel" parent="."]
margin_right = 784.0
margin_bottom = 405.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 37.28, 0 )
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="DisplayPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_right = -50.0
margin_bottom = -50.0
grow_horizontal = 2
size_flags_vertical = 0
alignment = 1

[node name="WarningLabel" type="Label" parent="DisplayPanel/VBoxContainer"]
margin_right = 684.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Incoming!"
align = 1
valign = 1

[node name="IconPanel" type="Panel" parent="DisplayPanel/VBoxContainer"]
margin_top = 36.0
margin_right = 684.0
margin_bottom = 355.0
grow_horizontal = 2
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="DisplayPanel/VBoxContainer/IconPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0

[node name="EnemyList" type="GridContainer" parent="DisplayPanel/VBoxContainer/IconPanel/ScrollContainer"]
margin_right = 634.0
margin_bottom = 269.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 9
